# maya-pa

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  requirements.txt  skills-lock.json
server/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
server/migrations/versions/: 7a37239fb318_initial_schema.py  a1b2c3d4e5f6_calendar_integration.py  b2c3d4e5f6a7_audit_turn_metrics.py  c3d4e5f6a7b8_documents.py  d4e5f6a7b8c9_document_chat_message_id.py
server/scripts/: seed_dev_user.py
server/src/live150/: config.py  main.py
server/src/live150/agent/: AGENTS.md  IDENTITY.md  USER.md  builder.py  caching.py  callbacks.py  doc_agent.py  genai_client.py  model_router.py  reflection.py  runner.py  search_agent.py  soul.md  summarizer.py  user_context.py
server/src/live150/api/: auth.py  chat.py  confirmations.py  documents.py  (+6 more)
server/tests/eval/: README.md  golden_dataset.jsonl  judges.py  run_eval.py
server/tests/integration/: test_chat_flow.py  test_tool_calls.py
server/tests/unit/: test_caching.py  test_crypto_vault.py  test_document_tools.py  test_documents_api.py  test_documents_sse.py  test_gcs_integration.py  test_jwt.py  test_live150_factory.py  test_live150_http_client.py  test_live150_mock_client.py  test_model_router.py  test_pg_pubsub.py  test_processor.py  test_reminder_jobs.py  test_reminder_parser.py  test_snap_api.py  test_stream_documents.py  test_voice_context.py  test_voice_session.py  test_voice_tools.py  test_write_gate.py
(+191 files in other folders)
